--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(project main.c)
 
 # создаём библиотеку
 add_library(str string/string_.h string/string_.c
-        # string / tasks / digitToStartTransform . h
+        #string/tasks/digitToStartTransform.h
         # string / tasks / reverseWords . h
         # string / tasks / replaceDigitsBySpaces . h
         # ...
